--- a/src/Lcobucci/ActionMapper2/Errors/ErrorPage.phtml
+++ b/src/Lcobucci/ActionMapper2/Errors/ErrorPage.phtml
@@ -5,47 +5,51 @@
 <title>{title}</title>
 <style type="text/css">
 body {
-	margin: 0;
-	background-color: #F0EBE2;
-	text-align: center;
-	font-size: 12px;
-	font-family: Tahoma, Verdana, sans-serif;
-	color: #444444;
+    margin: 0;
+    background-color: #F0EBE2;
+    text-align: center;
+    font-size: 12px;
+    font-family: Tahoma, Verdana, sans-serif;
+    color: #444444;
 }
 
 #container {
-	border: 1px solid #AAAAAA;
-	background-color: #FFFFFF;
-	padding: 40px;
-	width: 80%;
-	margin: auto;
-	margin-top: 53px;
-	text-align: left;
+    border: 1px solid #AAAAAA;
+    background-color: #FFFFFF;
+    padding: 40px;
+    width: 80%;
+    margin: auto;
+    margin-top: 53px;
+    text-align: left;
 }
 
 h1 {
-	font-size: 20px;
-	font-weight: bold;
-	padding-bottom: 4px;
-	border-bottom: 1px solid #AAAAAA;
-	margin-bottom: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    padding-bottom: 4px;
+    border-bottom: 1px solid #AAAAAA;
+    margin-bottom: 5px;
 }
 
 h2 {
-	font-size: 14px;
-	margin: 0px;
-	padding-bottom: 10px;
+    font-size: 14px;
+    margin: 0px;
+    padding-bottom: 10px;
 }
 
 #trace {
-	overflow-y: auto;
-	margin-top: 10px;
-	padding: 8px;
-	border: 1px solid #CCCCCC;
-	height: auto;
-	max-height: 350px;
-	text-align: left;
-	white-space: pre;
+    overflow-y: auto;
+    margin-top: 10px;
+    padding: 8px;
+    border: 1px solid #CCCCCC;
+    height: auto;
+    max-height: 350px;
+    text-align: left;
+    white-space: pre;
+}
+
+.hide {
+    display: none;
 }
 </style>
 </head>
@@ -53,10 +57,18 @@ h2 {
     <div id="container">
         <h1>Error {statusCode}</h1>
         <h2>{message}</h2>
-        <div>
+        <div id="traceContainer">
             Further information:
             <div id="trace">{trace}</div>
         </div>
     </div>
+    <script type="text/javascript">
+    window.onload = function ()
+    {
+        if (document.getElementById('trace').innerHTML == '') {
+            document.getElementById('traceContainer').className = 'hide';
+        }
+    };
+    </script>
 </body>
 </html>
